# schedule-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
schedule_mcp/: server.py
schedule_mcp/auth/: __init__.py  google_auth.py
schedule_mcp/clients/: gcal.py  notion.py
schedule_mcp/tools/: __init__.py  appointments.py  calendar.py  schedule.py  tasks.py
